feat(docker): 增加 nginx 配置

--- a/nginx/sites-available/default.conf
+++ b/nginx/sites-available/default.conf
@@ -2,5 +2,42 @@ server {
     server_name _;
     root /var/www/miaoxing/public;
 
-    include /etc/nginx/server-common.conf;
+    listen 80;
+    listen [::]:80;
+
+    index index.html;
+
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    # index.php fallback
+    location ~ ^/([a-z]+-)?api/ {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+     location ~ ^/admin {
+        try_files $uri $uri/ /admin.html;
+    }
+
+    location ~ \.php$ {
+        try_files $fastcgi_script_name =404;
+        fastcgi_pass php-fpm:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+
+    location ~ .*\.(gif|jpg|jpeg|png|bmp)$ {
+        expires 30d;
+        error_log off;
+        access_log off;
+    }
+
+    location ~ .*\.(js|css)?$  {
+        expires 12h;
+        error_log off;
+        access_log off;
+    }
 }
