feat(docker): nginx 不缓存入口页

--- a/nginx/sites-enabled/default.conf
+++ b/nginx/sites-enabled/default.conf
@@ -11,13 +11,18 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    location /index.html {
+        add_header Cache-Control "no-store, no-cache, must-revalidate";
+    }
+
     # index.php fallback
     location ~ ^/([a-z]+-)?api/ {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-     location ~ ^/admin {
+    location ~ ^/admin {
         try_files $uri $uri/ /admin.html;
+        add_header Cache-Control "no-store, no-cache, must-revalidate";
     }
 
     location ~ \.php$ {
